Update podman cask name

--- a/ansible_osx.yml
+++ b/ansible_osx.yml
@@ -41,7 +41,7 @@
         - iterm2
         - kindle
         - ngrok
-        - podman
+        - podman-desktop
         - slack
         #- sublime-text
         #- telegram
