--- a/ansible_osx.yml
+++ b/ansible_osx.yml
@@ -33,7 +33,7 @@
         #- android-sdk
         #- android-studio
         #- datagrip
-        #- docker
+        s- docker
         #- dropbox
         #- figma
         - google-chrome
