Fix extra char error

--- a/ansible_osx.yml
+++ b/ansible_osx.yml
@@ -33,7 +33,7 @@
         #- android-sdk
         #- android-studio
         #- datagrip
-        s- docker
+        - docker
         #- dropbox
         #- figma
         - google-chrome
