Add docker-compose installation

--- a/ansible_osx.yml
+++ b/ansible_osx.yml
@@ -34,6 +34,7 @@
         #- android-studio
         #- datagrip
         - docker
+        - docker-compose
         #- dropbox
         #- figma
         - google-chrome
